<resources>
    <string name="app_name">Business English</string>
    
    <!-- Onboarding screen strings -->
    <string name="onboard">Onboard</string>
    <string name="main_title">Learn Business English\nOn The Go</string>
    <string name="subtitle">Track progress. Learn offline.</string>
    <string name="description">Monitor your progress and download lessons for offline access, ensuring uninterrupted learning.</string>
    <string name="get_started">Get started</string>
    
    <!-- Sign In screen strings -->
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="wrong_password">Wrong password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password</string>
 </resources>